--- a/style.css
+++ b/style.css
@@ -29,3 +29,8 @@ img {
 .nav-item:hover .dropdown-menu:not(.show) {
     display: block;
 }
+
+.page-numbers.current > span {
+    background-color: gray;
+    color: #fff;
+}
