change some styles

--- a/assets/src/sass/2-generic/_gutenberg.scss
+++ b/assets/src/sass/2-generic/_gutenberg.scss
@@ -9,7 +9,7 @@
       padding: 0 $padding-right 0 $padding-left;
     }
 
-    & > .alignfull {
+    & > .alignwide {
       max-width: $wide_width;
     }
   }
