--- a/assets/src/sass/5-editor/_editor.scss
+++ b/assets/src/sass/5-editor/_editor.scss
@@ -4,3 +4,4 @@
 @import "../2-generic/elements";
 @import "../2-generic/buttons";
 @import "../2-generic/editor-color-classes";
+@import "../2-generic/common-classes";
