--- a/assets/src/sass/main.scss
+++ b/assets/src/sass/main.scss
@@ -1,6 +1,6 @@
 // Essentials.
 @import "essentials";
-@import "./0-settings/colors";
+@import "0-settings/colors";
 
 // Generic
 @import "2-generic/generic";
