add some styles for head search input

--- a/assets/src/sass/2-generic/_search-results.scss
+++ b/assets/src/sass/2-generic/_search-results.scss
@@ -6,6 +6,11 @@
   }
 }
 
+form.d-flex > input.form-control {
+  margin: 0 10px;
+  height: 100%;
+}
+
 .search-card-container {
 
   .search-card-content {
